fix: change arrow to right when sidebar collapsed

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -139,3 +139,12 @@
     display: flex;
   }
 }
+
+.collapsedMenuItem {
+  display: none;
+  transform: rotate(180deg);
+
+  @media (min-width: breakpoint.$desktop) {
+    display: flex;
+  }
+}
